Added ability to name new maps. Refracted code